@@ -2,6 +2,7 @@
 ------------------------------------------------------------------------
 - Improved: [objects#272, objects#276, objects#277, objects#278, objects#279, objects#280, objects#281] Add missing RCT1 ride and vehicle objects.
 - Improved: [objects#275, objects#284, objects#286] Add missing RCT1 walls.
+- Fix: [#17610] Some scenery items are unavailable in RCT1 scenarios.
 - Fix: [#20907] RCT1/AA scenarios use the 4-across train for the Inverted Roller Coaster.
 - Fix: [#21332] Mini Helicopters and Monorail Cycles ride types are swapped in research within RCT1 scenarios.
 - Fix: [#21347] Too many options are hidden if the platform has no file picker.
